<resources>
    <string name="app_name">GSAN ATUALIZAÇÃO CADASTRAL</string>
    <string name="matricula">Matricula:</string>
    <string name="menu_settings">Settings</string>
    <string name="numero_versao">Versão 1</string>
    <string name="is_required">É obrigatorio:</string>
    <string name="db_error">Erro ao acessar o banco de dados</string>
    <string name="db_error_insert_record">Erro ao Inserir o registro</string>
    <string name="db_error_delete_record">Erro ao apagar o registro</string>
    <string name="db_error_search_record">Erro ao consultar o registro</string>
    <string name="botao_login_entrar">Entrar</string>
    <string name="botao_login_sair">Sair</string>
    <string name="str_login_user">Login: </string>
    <string name="str_login_pass">Senha: </string>
    <string name="str_login_cpf">CPF: </string>
    <string name="str_ou">ou</string>
    <string name="str_file_selector_title">Arquivos offline disponíveis</string>
    <string name="str_file_ad_title">Lista de Arquivos Finalizados</string>
    <string name="titulo_carregando_arquivo">Carregando arquivo on-line. Por favor, aguarde!</string>
    <string name="exportando_banco">Exportando banco. Por favor, aguarde!</string>
    <string name="carregando">Carregando...</string>
    <string name="error_ao_carregar_arquivo">Erro ao carregar arquivo</string>
    <string name="sim">Sim</string>
    <string name="falha_conexao">Não foi possivel concluir o download do arquivo. Deseja tentar novamente ou encaminhar pro carregamento do arquivo offline?</string>
    <string name="servidor_fora_do_ar">Servidor fora do ar</string>
    <string name="conexao_falhou">Não foi possível conectar ao servidor GSAN.
		Encaminhando para trabalho OFFLINE</string>
    <string name="nao_exist_arquivo_para_carregar">Nenhum arquivo para carregar.</string>
    <string name="sair">Sair</string>
    <string name="carregar_offline">Carregando arquivo OFFLINE</string>
    <string name="nao_existe_arquivo">Nenhum arquivo encontrado</string>
    <string name="aba_localidade">Localidade</string>
    <string name="setorComercial">Setor Comercial:</string>
    <string name="localidade">Localidade:</string>
    <string name="quadra">Quadra:</string>
    <string name="lote">Lote:</string>
    <string name="sublote">Sublote:</string>
    <string name="title_activity_inserir_logradouro">Inserir Logradouro</string>
    <string name="title_activity_logradouro_inserir">Inserir Logradouro</string>
    <string name="str_preencher_campos">Preencha os campos abaixo: </string>
    <string name="str_tipo_logradouro">Tipo Logradouro: </string>
    <string name="str_titulo_logradouro">Título Logradouro: </string>
    <string name="str_nome">Nome: </string>
    <string name="str_nome_popular_logradouro">Nome Popular: </string>
    <string name="str_loteamento">Loteamento: </string>
    <string name="str_municipio">Município: </string>
    <string name="str_lista_bairros">Lista de Bairros: </string>
    <string name="str_cep">CEP: </string>
    <string name="str_inserir">Inserir</string>
    <string name="str_cancelar">Cancelar</string>
    <string name="str_bairros_selecionados">Bairros Selecionados</string>
    <string name="error_bairro_ja_selecionado">Este Bairro já foi adicionado!</string>
    <string name="msg_bairro_removido_sucesso">Bairro removido com sucesso!</string>
    <string name="error_cep_ja_selecionado">Este CEP já foi adicionado!</string>
    <string name="msg_cep_removido_sucesso">CEP removido com sucesso!</string>
    <string name="cep_invalido">CEP Inválido</string>
    <string name="msg_cep_invalido">CEP deve conter 8 dígitos!</string>
    <string name="str_lista_ceps">Lista de CEPs: </string>
    <string name="str_adicionar">Adicionar</string>
    <string name="cabecalho_logradouro">INSERIR LOGRADOURO - GSAN Atualização Cadastral</string>
    <string name="title_activity_endereco_aba">Endereço</string>
    <string name="str_logradouro">Logradouro: </string>
    <string name="str_referencia_numero">Referência/Número: </string>
    <string name="str_complemento">Complemento: </string>
    <string name="str_bairro">Bairro: </string>
    <string name="str_endreco">Endereço: </string>
    <string name="roteiro_titulo">Roteiro de Imóveis</string>
    <string name="quantidade">Quantidade:</string>
    <string name="cabecalho_roteiro">Roteiro de Imóveis - GSAN Atualização Cadastral</string>
	<string name="str_imoveis_spinner_todos">Todos</string>
	<string name="str_imoveis_spinner_matricula_imovel">Matricula do Imóvel</string>
	<string name="str_imoveis_spinner_imoveis_pendentes">Imóveis Pendentes</string>
	<string name="str_imoveis_spinner_posicao">Número de Ordem</string>
	<string name="str_imoveis_spinner_novo_imovel">Imóvel Novo</string>
    <string name="str_imoveis_spinner_numero_hidrometro">Número do Hidrômetro</string>
    <string name="str_imoveis_spinner_cpfcnpj">CPF/CNPJ</string>
	<string name="str_cliente_tipo">Tipo de Cliente: </string>
	<string name="str_pessoa_tipo">Tipo de Pessoa: </string>
	<string name="str_pessoa_fisica">Física </string>
	<string name="str_pessoa_juridica">Jurídica </string>
	<string name="str_cpf_cnpj">CPF/CNPJ: </string>
	<string name="str_nome_cliente">Nome do Cliente: </string>
	<string name="str_data_nascimento">Data de Nascimento: </string>
	<string name="str_numero_rg">RG: </string>
	<string name="str_orgao_expedidor">Órgão Expeditor: </string>
	<string name="str_unidade_federacao">UF: </string>
	<string name="str_data_emissao_rg">Data Emis.: </string>
	<string name="str_pessoa_sexo">Sexo: </string>
	<string name="str_masculino">Masculino </string>
	<string name="str_feminino">Feminino </string>
	<string name="title_activity_endereco_cliente">Cliente</string>
	<string name="title_pessoa_sexo">Pessoa Sexo</string>
	<string name="msg_pessoa_sexo_invalido">Selecione Pessoa Sexo</string>
	<string name="title_tipo_pessoa">Tipo de Cliente</string>
	<string name="msg_cliente_tipo_invalido">Selecione o Tipo de Cliente</string>
	<string name="title_data_nascimento">Data de Nascimento</string>
	<string name="msg_data_nascimento_invalida">Data de Nascimento Inválida</string>
	<string name="title_data_emissao_rg">Data de Emissão RG</string>
	<string name="msg_data_emissao_rg_invalida">Data de Emissão RG Inválida</string>
	<string name="str_lista_telefones">Telefones </string>
	<string name="str_fone_tipo">Tipo de Telefone: </string>
	<string name="str_fone_cddd">DDD: </string>
	<string name="str_numero_fone">Telefone: </string>
	<string name="error_tel_ja_selecionado">Este Telefone já foi adicionado!</string>
	<string name="msg_tel_removido_sucesso">Telefone removido com sucesso!</string>
	<string name="title_activity_imovel">Imóvel</string>
	<string name="str_perfil_imovel">Perfil: </string>
	<string name="str_tarifa_social">Analisar Tarifa Social: </string>
	<string name="str_tarifa_social_sim">Sim</string>
	<string name="str_tarifa_social_nao">Não</string>
	<string name="str_numero_medidor_energia">Num. Medidor Energia: </string>
	<string name="str_numero_moradores">Num. de Moradores: </string>
	<string name="str_pavimento_rua">Pavimento Rua: </string>
	<string name="str_pavimento_calcada">Pavimento Calçada: </string>
	<string name="str_fonte_abastecimento">Fonte de Abastecimento: </string>
	<string name="str_lista_categorias">Categorias </string>
	<string name="str_adicionar_categorias">Adicionar Categorias </string>
	<string name="str_categoria_imovel">Categoria: </string>
	<string name="str_subcategoria_imovel">Subcategoria: </string>
	<string name="str_quantidade_economias">Quantidade de Economias: </string>
	<string name="str_label_categorias">Categoria </string>
	<string name="str_label_sub_categorias">Subcategoria </string>
	<string name="str_label_qtde_economias">Quantidade </string>
	<string name="str_label_opcao">Opção </string>
	<string name="error_categoria_ja_selecionada">Esta Categoria já foi adicionada!</string>
	<string name="msg_categoria_removida_sucesso">Categoria removida com sucesso!</string>
	<string name="cabecalho_categoria">ADICIONAR CATEGORIA - GSAN Atualização Cadastral</string>
    <string name="title_activity_ligacao_aba">Ligação</string>
    <string name="str_situacao_agua">Situação de Água: </string>
    <string name="str_situacao_esgoto">Situação de Esgoto: </string>
    <string name="str_hidrometro_agua">Hidrometro Água: </string>
    <string name="str_sim">Sim</string>
    <string name="str_nao">Não</string>
    <string name="str_numero_hidrometro">Número Hidrômetro: </string>
    <string name="str_confirma_numero">Confirma Número: </string>
    <string name="str_local_instalacao">Local Instalação: </string>
    <string name="str_tipo_protecao">Tipo Proteção: </string>
    <string name="str_cavalete">Cavalete: </string>
    <string name="str_leitura">Leitura: </string>
    <string name="str_observacao">Observação: </string>
    <string name="str_alert_download_title"> Download de nova versão</string>
    <string name="str_download_erro_problema_desconhecido">Houve um problema desconhecido carregar os dados. Encaminhando para carregamento OFFLINE</string>
    <string name="str_download_erro_abortar">Enviando para tela de escolha do arquivo</string>
    <string name="str_download_progress_titulo">Carregando o arquivo. Por favor, aguarde&#8230;</string>
    <string name="str_download_alert_file">Erro ao carregar arquivo</string>
    <string name="str_download_servidor_offline">Servidor offline</string>
    <string name="str_error_aborted">Você é obrigado a baixar e instalar a versão</string>
    <string name="str_alert_download_download_error"> Não há nova versão disponível.</string>
    <string name="str_alert_verificar_versao_erro">Houve um erro ao baixar o arquivo.</string>
    <string name="str_alert_download_apk_erro">Houve um erro ao verificar se há nova versão.</string>
    <string name="str_error_nofile">Nenhum arquivo liberado para o celular. Encaminhando para carregamento OFFLINE</string>
    <string name="str_error_off">O aparelho está sem sinal ou o servidor está OFFLINE. Tente de novo.</string>
    <string name="str_error_download">Houve um problema ao baixar o arquivo. Encaminhando para carregamento OFFLINE</string>
    <string name="str_error_laoding">Houve um problema ao carregar o arquivo. Encaminhando para carregamento OFFLINE</string>
    <string name="str_error_route_signal">Houve um erro ao tentar marcar o arquivo para EM CAMPO. Encaminhando para carregamento OFFLINE</string>
    <string name="str_geral_bt_cancela">Cancelar</string>
	<string name="str_sair_carregamento">Sair</string>
	<string name="str_alert_versao_desatualizada"> Versão desatualizada</string>
	<string name="conexao_servidor_gsan">Conectando com o servidor GSAN.</string>
    <string name="validando_versao">Validando versão do sistema. Por favor, aguarde!</string>
    <string name="title_activity_fotos_aba">Fotos</string>
    <string name="str_data">Data: </string>
    <string name="str_frente_casa">Frente da Casa</string>
    <string name="str_hidrometro">Hidrômetro</string>
    <string name="str_excluir">Excluir</string>
    <string name="str_lista_ocorrencias">Lista de Ocorrências de Cadastro: </string>
    <string name="error_ocorrencia_ja_selecionado">Esta Ocorrência de Cadastro já foi adicionada!</string>
    <string name="msg_ocorrencia_removida_sucesso">Ocorrência de Cadastro removida com sucesso!</string>
    <string name="finalizar_roteiro">Finalizar Roteiro</string>
    <string name="novo_imovel">Novo Imóvel</string>
    <string name="str_menu_relatorio">Relatórios</string>
    <string name="str_progress_cep">Enviando os Ceps</string>
    <string name="str_progress_imovel">Enviando os Imóveis</string>
	<string name="str_progress_photos">Enviando Fotos</string>
	<string name="str_progress_logradouro">Enviando os Logradouros</string>
	<string name="str_progress_logradourocep">Enviando os Logradouros Ceps</string>
</resources>