<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:orientation="vertical">
  
  <TextView android:text="@string/str_progress_cep" android:layout_width="fill_parent" android:layout_height="wrap_content"></TextView>
  <ProgressBar android:id="@+id/progressByCep" android:layout_width="fill_parent" android:layout_height="40px" style="?android:attr/progressBarStyleHorizontal" android:max="100"/>
  
  <TextView android:text="@string/str_progress_logradouro" android:layout_width="fill_parent" android:layout_height="wrap_content"></TextView>
  <ProgressBar android:id="@+id/progressByLogradouro" android:layout_width="fill_parent" android:layout_height="40px" style="?android:attr/progressBarStyleHorizontal" android:max="100"/>
  
  <TextView android:text="@string/str_progress_logradourocep" android:layout_width="fill_parent" android:layout_height="wrap_content"></TextView>
  <ProgressBar android:id="@+id/progressByLogradouroCep" android:layout_width="fill_parent" android:layout_height="40px" style="?android:attr/progressBarStyleHorizontal" android:max="100"/>
    
  <TextView android:text="@string/str_progress_imovel" android:layout_width="fill_parent" android:layout_height="wrap_content"></TextView>
  <ProgressBar android:id="@+id/progressByImovel" android:layout_width="fill_parent" android:layout_height="40px" style="?android:attr/progressBarStyleHorizontal" android:max="100"/>

  <TextView android:text="@string/str_progress_photos" android:layout_width="fill_parent" android:layout_height="wrap_content"></TextView>
  <ProgressBar android:id="@+id/progressByFoto" android:layout_width="fill_parent" android:layout_height="40px" style="?android:attr/progressBarStyleHorizontal" android:max="100"/>
    
</LinearLayout>
