<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImovelAbaActivity" android:scrollbars="vertical" >

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	   	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:shrinkColumns="3" >
	
        <LinearLayout android:paddingTop="8dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" >
        	<!-- Perfil do Imóvel -->
        	<TextView android:layout_width="wrap_content" style="@style/labelAba" android:layout_height="wrap_content"
        	    	  android:textStyle="bold" android:text="@string/str_perfil_imovel" android:id="@+id/perfilImovel" android:layout_marginRight="180dip"/>
        	<Spinner android:layout_weight="1" android:layout_marginBottom="10dp" android:layout_height="60dp"
        	    	 android:id="@+id/spnPerfilImovel" android:layout_width="0dp" />
		</LinearLayout>
		
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" >
        	<!-- Tarifa Social -->
        	<TextView android:layout_width="wrap_content" style="@style/labelAba" android:layout_height="wrap_content"
        	    	  android:textStyle="bold" android:text="@string/str_tarifa_social" android:id="@+id/tarifaSocial" android:layout_marginRight="39dip"/>
        	<RadioGroup android:id="@+id/radioGroupTarifaSocial" android:orientation="horizontal"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content" >
				
        	    <RadioButton android:id="@+id/radioTarifaSocialSim"
				             android:layout_width="wrap_content"
				             android:layout_height="wrap_content"
				             android:textStyle="bold"
				             android:text="@string/str_tarifa_social_sim" />
        	    
        	    <RadioButton android:id="@+id/radioTarifaSocialNao"
		                	 android:layout_width="wrap_content"
		                	 android:layout_height="wrap_content"
		                	 android:textStyle="bold"
		                	 android:text="@string/str_tarifa_social_nao" />
        	</RadioGroup>	   
        </LinearLayout>
        
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" >
        	<!-- Numero Medidor de Energia -->
        	<TextView android:layout_width="wrap_content" style="@style/labelAba" android:layout_height="wrap_content"
        	    	  android:textStyle="bold" android:text="@string/str_numero_medidor_energia" android:id="@+id/medidorEnergia" android:layout_marginRight="38dip"/>
        	<EditText style="@style/editAbaMedio" android:id="@+id/edtNumMedidorEnergia" android:textColor="#000000" android:maxLength="10" android:inputType="textCapCharacters"/>    
        </LinearLayout>
        
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
            
            <!-- Numero de Moradores -->
            <TextView android:layout_width="wrap_content" style="@style/labelAba" android:layout_height="wrap_content"
                	  android:textStyle="bold" android:text="@string/str_numero_moradores" android:id="@+id/numeroMoradores" android:layout_marginRight="58dip"/>
            <EditText style="@style/editAbaMenor" android:inputType="number" android:id="@+id/edtNumMoradores" android:textColor="#000000" android:maxLength="4" />
        </LinearLayout>
        
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
            <!-- Pavimento Rua -->
            <TextView android:layout_width="wrap_content" style="@style/labelAba" android:layout_height="wrap_content"
                	  android:textStyle="bold" android:text="@string/str_pavimento_rua" android:id="@+id/pavimentoRua" android:layout_marginRight="95dip" />
            <Spinner android:layout_weight="1" android:layout_marginBottom="10dp" android:layout_height="60dp"
        	    	 android:id="@+id/spnPavimentoRua" android:layout_width="0dp" />
        </LinearLayout>
        
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal">
            <!-- Pavimento Calçada -->
            <TextView android:layout_width="wrap_content" style="@style/labelAba" android:layout_height="wrap_content"
                	  android:textStyle="bold" android:text="@string/str_pavimento_calcada" android:layout_marginRight="58dip" android:id="@+id/pavimentoCalcada" />
            <Spinner  android:layout_weight="1" android:layout_marginBottom="10dp" android:layout_height="60dp" android:layout_width="0dp"
                	  android:id="@+id/spnPavimentoCalcada" />
        </LinearLayout>
        
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal">
            <!-- Fonte de Abastecimento -->
            <TextView android:layout_width="wrap_content" style="@style/labelAba" android:layout_height="wrap_content"
                	  android:textStyle="bold" android:text="@string/str_fonte_abastecimento" android:layout_marginRight="17dip" android:id="@+id/fonteAbastecimento" />
            <Spinner android:layout_weight="1" android:layout_marginBottom="10dp" android:layout_height="60dp" android:layout_width="0dp"
                	 android:id="@+id/spnFonteAbastecimento" />
        </LinearLayout>

        <!-- Linha -->
        <LinearLayout android:layout_width="fill_parent"  android:orientation="horizontal"
		     android:layout_height="fill_parent" android:paddingLeft="35dp"  android:paddingRight="35dp"
		     android:paddingBottom="30dp" android:paddingTop="30dp">
		    <View
			    android:id="@+id/linha"
			    android:layout_width="fill_parent"
			    android:layout_height="2dp" 
			    android:paddingLeft="20dp"
			    android:paddingRight="20dp"
			    android:background="#A8A8A8"
			     />
	    
    	</LinearLayout>
        
        <!-- TABELA CATEGORIAS -->
        <TableLayout android:id="@+id/tableLayoutCategorias" android:layout_marginLeft="10dip" android:layout_marginRight="10dip"
				android:orientation="horizontal" android:layout_width="fill_parent"
				android:layout_height="fill_parent" android:background="@drawable/fundobranco_bg" android:stretchColumns="*" >

            <LinearLayout android:layout_width="fill_parent"  android:layout_height="wrap_content" android:orientation="horizontal">
	        	<TextView  android:paddingTop="10dip" android:layout_width="wrap_content" android:text="@string/str_lista_categorias" style="@style/labelAbaMenor" android:textStyle="bold" android:layout_marginLeft="10dip"/>
	        	
	        	<Space android:layout_width="350dip" android:layout_height="wrap_content"/> 
	        	<LinearLayout android:layout_width="fill_parent"  android:layout_height="wrap_content" android:paddingTop="10dp">
	        		<Button android:text="@string/str_adicionar" android:textColor="#ffffff" android:gravity="center" android:id="@+id/btAdicionarCategoria" android:layout_gravity="right"
					    	android:layout_height="40dip" android:layout_width="wrap_content" android:background="@drawable/bt_azul" android:paddingLeft="12dip" android:paddingRight="12dip" />
	        	</LinearLayout>
	        </LinearLayout>
            <!-- <TableLayout android:id="@+id/tabelaCategorias" android:layout_width="fill_parent" 
				    	 android:layout_height="wrap_content" android:stretchColumns="0" /> -->
	        
            <TableRow android:paddingTop="10dip">
                <TextView android:text="@string/str_label_categorias" android:textStyle="bold" style="@style/labelAba" />
                
                 <TextView android:text="@string/str_label_sub_categorias" android:textStyle="bold" style="@style/labelAba" android:paddingLeft="80dp"  android:layout_width="240dp"/>
	            
	            <TextView android:text="@string/str_label_qtde_economias" android:textStyle="bold" style="@style/labelAba" />	            
	            
	            <!--  <TextView android:text="@string/str_label_opcao" android:textStyle="bold" style="@style/labelAba" />	-->            
            </TableRow>
        	
        	<View android:id="@+id/linhaCategoria"
			      android:layout_width="fill_parent"
			      android:layout_height="2dp"
			      android:background="#808080" />
	       	        	
        </TableLayout>
        
        <Space android:layout_height="20dp" android:layout_width="fill_parent"/>
        <View android:id="@+id/linhaCategoria2" android:layout_width="fill_parent" android:layout_height="2dp" android:background="#808080" />
        
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical" android:layout_marginBottom="250dp" />
        
	</TableLayout>
</ScrollView>